compilateurMinCaml/tests/typechecking/invalid/Let.ml
let x = 1.5 in print_int x